// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build should change the output when built after an update 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body.this-is-an-embedded-asset {
                    background: blue;
                  }
                </style>
                <link rel=\\"stylesheet\\" href=\\"/style.css\\">
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "/reset.css": Object {
      "content": "
            body {
              margin: 0;
            }
          ",
    },
    "/style.css": Object {
      "content": "
            @import '/reset.css'
          ",
    },
  },
}
`;

exports[`build should change the output when built after an update 2`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body.this-is-an-embedded-asset {
                    background: blue;
                  }
                </style>
                <link rel=\\"stylesheet\\" href=\\"/style.css\\">
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "/reset.css": Object {
      "content": "
            html {
              margin: 0;
            }

            body {
              margin: 0;
            }
          ",
    },
    "/style.css": Object {
      "content": "
            @import '/reset.css'
          ",
    },
  },
}
`;

exports[`build should work for a complex example that includes a bunch of dependencies and embedded documents 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body.this-is-an-embedded-asset {
                    background: blue;
                  }
                </style>
                <link rel=\\"stylesheet\\" href=\\"/style.css\\">
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "/reset.css": Object {
      "content": "
            body {
              margin: 0;
            }
          ",
    },
    "/style.css": Object {
      "content": "
            @import '/reset.css'
          ",
    },
  },
}
`;

exports[`dev should work for a complex example that includes a bunch of dependencies and embedded documents 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body.this-is-an-embedded-asset {
                    background: blue;
                  }
                </style>
                <link rel=\\"stylesheet\\" href=\\"/style.css\\">
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "/reset.css": Object {
      "content": "
            body {
              margin: 0;
            }
          ",
    },
    "/style.css": Object {
      "content": "
            @import '/reset.css'
          ",
    },
  },
  "isLatest": true,
}
`;

exports[`dev should work for a complex example that includes a bunch of dependencies and embedded documents 2`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body.this-is-an-embedded-asset {
                    background: blue;
                  }
                </style>
                <link rel=\\"stylesheet\\" href=\\"/style.css\\">
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "/new.css": Object {
      "content": "body {
              new: file;
            }",
    },
    "/reset.css": Object {
      "content": "
            body {
              margin: 0;
            }
          ",
    },
    "/style.css": Object {
      "content": "
              @import '/reset.css';
              @import '/new.css';

              body {
                margin: 0;
              }
            ",
    },
  },
  "isLatest": true,
}
`;

exports[`dev should work for a complex example that includes a bunch of dependencies and embedded documents 3`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body.this-is-an-embedded-asset {
                    background: blue;
                  }
                </style>
                <link rel=\\"stylesheet\\" href=\\"/style.css\\">
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "/new.css": Object {
      "content": "body {
              new: file;
            }",
    },
    "/reset.css": Object {
      "content": "
            body {
              margin: 0;
            }
          ",
    },
    "/style.css": Object {
      "content": "
              @import '/reset.css';
              @import '/new.css';

              body {
                margin: 0;
              }
            ",
    },
  },
  "isLatest": true,
}
`;
